🌺🛬 Updated with Glitch

--- a/basic.html
+++ b/basic.html
@@ -8,7 +8,7 @@
     <title>Gymnastics, A Crash Course!</title>
     <style>
       h1 {
-        color: rgb(110, 105, 254);
+        color: rgb(72, 107, 134);
       }
       body {
         background-color: rgb(208, 175, 211);
@@ -63,17 +63,10 @@
       h1 {
         font-family: sour gummy;
       }
-      h1 {
-        text-align: center;
-        padding: 200px;
-      }
-      h1 {
-        font-size: 60px;
+      h2 {
+        font-size: 28px;
       }
 
-      h2 {
-        font-size: 24px;
-      }
       body {
         margin: 0px;
       }
@@ -98,16 +91,12 @@
       .navbar li {
         float: left;
       }
-      body {
-        background-image: url(https://media-cldnry.s-nbcnews.com/image/upload/rockcms/2024-07/olympics-gymnastics-cz-240719-db8e3a.jpg);
+      .overview {
+        background: rgb(225, 204, 234);
+        padding: 1px;
       }
+      span:hover {background-color: rgb(40,220,212);}
     </style>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <nav class="navbar">
@@ -118,8 +107,38 @@
         <li><a href="fame-gym.html">Famous Gymnasts</a></li>
       </ul>
     </nav>
-    <main>
-      <h1>Gymnastics, A Crash Course!</h1>
-    </main>
+    <div class="overview">
+      <h2>The Basics</h2>
+    </div>
+    <p>
+      There are many different sports of gymnastics. The most popular of which
+      is <strong id="artistic-gymnastics">Artistic Gymnastics</strong>. With big
+      names in mainstream media, such as Stephen Nedoroscik on <span ><a href="https://ew.com/dancing-with-the-stars-stephen-nedoroscik-brings-back-pommel-horse-finale-8752588">DWTS</a></span>, as well as
+      thesport being a headline event at the Olympics, Artistic Gymnastics is
+      arguably the most popular form of gymnastics. For the purpouses of this
+      webpage we will focus on Artistic Gymnastics. There are 2 types of
+      Artistic Gymnastics, <em>Mens</em> and <em>Womens</em>. Mens and Womens
+      Gymnastics are considered 2 different sports.
+    </p>
+    <h3>Mens Gymnastics</h3>
+    <p>Mens Gymnastics has 6 events:</p>
+    <ol>
+      <li class="events-list">Floor Exercise</li>
+      <li class="events-list">Pommel Horse</li>
+      <li class="events-list">Still Rings</li>
+      <li class="events-list">Vault</li>
+      <li class="events-list">Parallel Bars</li>
+      <li class="events-list">High Bar</li>
+    </ol>
+
+    <h3>Womens Gymnastics</h3>
+    <p>Womens Gymnastics has 4 events:</p>
+    <ol>
+      <li class="events-list">Vault</li>
+      <li class="events-list">Uneven Bars</li>
+      <li class="events-list">Balance Beam</li>
+      <li class="events-list">Floor Exercise</li>
+    </ol>
   </body>
+  
 </html>
